--- a/front/package.json
+++ b/front/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.0.0",
-    "postcss": "^8.4.14"
+    "postcss": "^8.4.14",
+    "vue-svg-loader": "^0.16.0"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
