--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,14 @@
   "dependencies": {
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
+    "esm": "^3.2.25",
+    "express": "^4.18.2",
+    "header-parser": "^1.0.0",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-respond": "^2.1.0",
